# Computer_Game

./: README.md
Python-Einstein/: run.py
go-amazons/: go.mod  main.go  record.go
go-amazons/amazon/: core.go  evaluate.go  move_generator.go  utils.go
go-amazons/engine/: alpha_beta_search.go
no-go/: .claudiaideconfig  Button.cpp  CMakeLists.txt  CheckerBoard.cpp  CheckerBoard.h  GameAI.h  GameAI_MCTS.cpp  GameRule.cpp  GameScene.cpp  GameScene.h  MenuBoard.cpp  MenuBoard.h  NG 卷羊毛-笨猪纯 先手胜.txt  NoGo.sln  NoGo.vcxproj  NoGo.vcxproj.filters  main.cpp
